# robot-client

./: .gitignore  README.md  dummy.py  install.sh  pyproject.toml  run.py  setup.sh
Ardunio/: install.sh  sample.py  setup.sh  update.py
Ardunio/Kicker/: Kicker.ino
DummyUDP/: TestUDPReciever.py  TestUDPSender.py  reciever.py  sender.py
WirelessController/: Controller.py  setup.sh
src/Client/: utils.py
src/Client/Controllers/: Ardunio.py  BaseController.py  Dribbler.py  Kicker.py  Motor.py  Receiver.py
src/Client/Receivers/: BaseReceiver.py  UDP.py  WirelessController.py
src/Client/Shared/: Action.py  State.py  imu.py  utils.py
src/Client/Telemetry/: BaseTelemetry.py  IMU.py
